<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentTasks"
            android:name="com.example.zad4.MainFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            tools:layout="@layout/fragment_tasks" />

    </LinearLayout>


</layout >